# polymarket-edge-trader

./: .env.example  .gitignore  AGENTS.md  BLOCKCHAIN_RPC_SETUP.md  LOGGING.md  OPERATIONS-CRON.md  OPERATIONS.md  README.md  REVIEW.md  auto-research-context.md  pyproject.toml
.claude/: QUICK_DEBUG.md
.planning/: AGENTS.md  COST_OPTIMIZATION_WORKFLOW.md  FIX_9_PREEXISTING_TEST_FAILURES.md  HANDOFF_PROTOCOL.md  MILESTONES.md  PHASE_8_PLANNING_HANDOFF.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  REVIEW_PROTOCOL.md  REVIEW_QUEUE.md  ROADMAP.md  STATE.md  TRADER_DISCOVERY_JOURNEY.md  WORKER_TASK_GAMMA_BATCH_TOKENS.md  WORKER_TASK_PROXY_RESOLUTION.md  WORKER_TASK_TOKEN_CACHE.md  config.json  fix-non-esports-db-pollution.md  graph-trade-resolution-roadmap.md  v1.2-MILESTONE-AUDIT.md
data/: discovery_test.json
docs/: BLOCKCHAIN_SOLUTION.md  CLAUDE_DEBUG_GUIDE.md  GRAPH_INTEGRATION_SUMMARY.md  GRAPH_SETUP_GUIDE.md  STORAGE_ALTERNATIVES.md  graph_api_comparison_test_set.md
niches/: esports.yaml
scripts/: backfill_missing_markets.py  batch_sell_only_fix.py  check_sell_only_progress.py  com.polymarket.heal-loop.plist  cron_pipeline.sh  demo_graph_integration.py  demo_graph_subgraph.py  fetch_trader_graph.py  fetch_trader_history.py  find_any_resolved_esports.py  find_resolved_markets.py  fix_remaining_sell_only.py  heal_loop.sh  heal_trapped_batch.py  install-hooks.sh  migrate_graph_market_ids.py  migrate_trades_composite_pk.sh  migrate_trades_python.py  profile_backfill.py  prune_bots.py  prune_resolved_40d.py  q5_panel_tripwire.py  query_jbecker_dataset.py  recover_trapped_traders.sh  refresh_bot_flags.py  reset_and_reingest.py  run_full_sweep_fixed.py  run_sweep_fixed.py  setup_graph_api.sh  snapshot_resolved_40d.py  test_discovery_fix.py  test_trader_backfill_fix.py  test_windowed_fetch.py  verify_market_trades_fix.py  verify_prune_resolved_40d.py  view_logs.sh  wallet_migration_tripwire.py  worker_validate.sh
src/: __init__.py
(+515 files in other folders)
