[project]
name = "polymarket-analytics"
version = "0.1.0"
description = "Polymarket Smart Money Tracker - Detect when multiple proven traders are positioned in the same new market"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiolimiter>=1.2.1",
    "anthropic>=0.86.0",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "sqlite-utils>=3.39",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
polymarket = "polymarket_analytics.cli:cli"
